steps/echoserver-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-envoy-service
  labels:
    app: echoserver
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
